# python-fundamental

./: .gitignore  BRD_AI_GURU.md  README.md  app.py  requirements.txt
config/: __init__.py  prompts.py  settings.py
logistics-dss/: .env.example  .gitignore  PHASE10_EXECUTION_LOG.md  PHASE10_IMPLEMENTATION_PLAN.md  PHASE1_EXECUTION_LOG.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE2_EXECUTION_LOG.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_EXECUTION_LOG.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_EXECUTION_LOG.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE5_EXECUTION_LOG.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE6_EXECUTION_LOG.md  PHASE6_IMPLEMENTATION_PLAN.md  PHASE7_EXECUTION_LOG.md  PHASE7_IMPLEMENTATION_PLAN.md  PHASE8_EXECUTION_LOG.md  PHASE8_IMPLEMENTATION_PLAN.md  PHASE9_EXECUTION_LOG.md  PHASE9_IMPLEMENTATION_PLAN.md  PROJECT_REQUIREMENTS.md  main.py  requirements.txt
logistics-dss/config/: __init__.py  constants.py  settings.py
logistics-dss/packaging/: logistics_dss.spec  pyproject.toml
logistics-dss/src/: __init__.py  i18n.py  logger.py
logistics-dss/tests/: __init__.py  conftest.py  test_abc_analysis.py  test_analytics_service.py  test_audit_event_repository.py  test_auth_service.py  test_database.py  test_forecast_service.py  test_forecasting.py  test_i18n.py  test_import_wizard.py  test_importer.py  test_kpi.py  test_ui.py  (+13 more)
src/: __init__.py  agent.py  document_processor.py  embeddings.py  logger.py  rag_pipeline.py  vector_store.py
tests/: __init__.py  conftest.py  test_ai_guru_agent.py  test_document_processor.py  test_rag_pipeline.py  test_vector_store.py
(+70 files in other folders)
